@@ -1,4 +1,8 @@
 Sun Nov 11 2001  Vitezslav Samel <samel@mail.cz>
+	* regex.c, regex.h: change regex pointer to be 'unsigned char *regex'
+	This kills some warnings during build.
+
+Sun Nov 11 2001  Vitezslav Samel <samel@mail.cz>
 	* cmd.c, menu.c, menu.h, rc.c, tab.c, ufile.c: use mkmenu(W *, ...)
 	instead of mkmenu(BASE *, ...).
 	This kills some warnings during build.
